# random-dist

./: .gitignore  LICENSE  README.markdown  mwc-random-dist.cabal  random-dist.cabal
Statistics/Distribution/Random/: Exponential.hs  Gamma.hs  Normal.hs  Poisson.hs  Uniform.hs
Statistics/Sampler/: Slice.hs
Statistics/Test/: KolmogorovSmirnov.hs
System/Random/MWC/: Exponential.hs  Gamma.hs
test/: Main.hs  Plot.hs  exp.hs  exp.r
test/Plot/: Utils.hs
