Name:                mwc-random-dist
Version:             0.1
Synopsis:            Implementation of various random distributions.
-- Description:         

Homepage:            https://github.com/finlayt/mwc-random-dist
License:             BSD3
License-file:        LICENSE
Author:              Finlay Thompson
Maintainer:          Finlay thompson <finlay@dragonfly.co.nz>
Copyright:           2011 Finlay Thompson
Category:            Math, Statisics
Build-type:          Simple

cabal-version:       >= 1.6
extra-source-files:
  README.markdown


Library
  exposed-modules:
    System.Random.MWC.Gamma
    System.Random.MWC.Exponential
  build-depends:
    base < 5,
    primitive,
    logfloat,
    mwc-random
  
  ghc-prof-options: -auto-all

  ghc-options: -Wall -funbox-strict-fields
