Name:               random-dist
Version:            0.1
Synopsis:           Implementation of various random distributions.
-- Description:         

Homepage:           https://github.com/finlayt/mwc-random-dist
License:            BSD3
License-file:       LICENSE
Author:             Finlay Thompson
Maintainer:         Finlay thompson <finlay@dragonfly.co.nz>
Copyright:          2011 Finlay Thompson
Category:           Math, Statisics
Build-type:         Simple

cabal-version:      >= 1.8
extra-source-files:
  README.markdown

flag test
  Description:      Build test program
  default:          True

Library
  exposed-modules:
    Statistics.Distribution.Random.Gamma
    Statistics.Distribution.Random.Exponential
    Statistics.Test.KolmogorovSmirnov
  build-depends:
    base < 5,
    primitive,
    logfloat,
    mwc-random,
    statistics,
    vector,
    vector-algorithms,
    repa,
    repa-algorithms
  
  ghc-prof-options: -auto-all

  ghc-options: -Wall -funbox-strict-fields

Executable test-random-dist
  Main-Is:          test/Main.hs
  other-modules:    Plot
                    Plot.Utils
  hs-source-dirs:   .,test
  if flag(test)
    Build-depends:  base >= 4 && < 6,
                    primitive,
                    logfloat,
                    mwc-random,
                    statistics,
                    vector,
                    vector-algorithms,
                    repa,
                    repa-algorithms,
                    data-accessor,
                    colour,
                    cairo,
                    Chart
  ghc-options:      -Wall
  if !flag(test)
    Buildable:      False


