name:               random-dist
version:            0.1
synopsis:           Implementation of various random distributions.
-- Description:         

homepage:           https://github.com/finlayt/mwc-random-dist
license:            BSD3
license-file:       LICENSE
author:             Finlay Thompson
maintainer:         Finlay thompson <finlay@dragonfly.co.nz>
copyright:          2011 Finlay Thompson
category:           Math, Statisics
build-type:         Simple

cabal-version:      >= 1.8
extra-source-files:
  README.markdown

flag test
  description:      Build test program
  default:          True

library
  exposed-modules:
    Statistics.Distribution.Random.Gamma
    Statistics.Distribution.Random.Exponential
    Statistics.Distribution.Random.Uniform
    Statistics.Distribution.Random.Normal
    Statistics.Sampler.Slice
  build-depends:
    base < 5,
    cri,
    transformers,
    primitive,
    logfloat,
    statistics,
    math-functions,
    vector,
    vector-algorithms
  
  ghc-prof-options: -auto-all
  ghc-options:      -O2 -Wall -funbox-strict-fields

Executable test-random-dist
  main-Is:          test/Main.hs
  other-modules:
    Plot
    Plot.Utils
  hs-source-dirs:   .,test
  if flag(test)
    build-depends:
      base >= 4 && < 6,
      transformers,
      primitive,
      logfloat,
      mwc-random,
      cri,
      cri-mwc-random,
      statistics,
      vector,
      vector-algorithms,
      repa,
      repa-algorithms,
      data-accessor,
      colour,
      cairo,
      Chart,
      test-framework
  ghc-options:      -Wall
  if !flag(test)
    buildable:      False


